# desafio-origem

./: CMakeLists.txt  LICENSE  README.md  main.cpp
header/: battery.hpp  cp.hpp  etb.hpp  host.hpp  moto.hpp
src/: battery.cpp  cp.cpp  etb.cpp  moto.cpp
